| Bug #29643 | Backup: Link failure of executable mysqld, symbol in backup not found | ||
|---|---|---|---|
| Submitted: | 9 Jul 2007 10:19 | Modified: | 18 Oct 2008 15:32 |
| Reporter: | Kent Boortz | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Backup | Severity: | S2 (Serious) |
| Version: | 5.2.4 | OS: | IBM AIX (5.2) |
| Assigned to: | Chuck Bell | CPU Architecture: | Any |
[9 Jul 2007 10:19]
Kent Boortz
[15 Sep 2008 22:25]
Chuck Bell
The Visual Age compiler was replaced with Xlc on AIX.
However, there are three issues with compiling backup on AIX:
1) The line terminator on method definitions causes a compiler error:
int my_method()
{
}; <---- Shame! Remove this.
2) There are C++ comments in .c files.
// this is bad
should be
/* this is better */
3) There are some namespace issues in backup_info.cc.
Patch is being tested. Solution forthcoming.
[16 Sep 2008 14:58]
Chuck Bell
Patch complies. All tests pass with patch except backup_timeout. The backup_wait_timeout variable is not being set when the command 'SET backup_wait_timeout=X' is issued. Investigating.
[16 Sep 2008 15:52]
Chuck Bell
The failure for the backup_timeout error is due to the value specified on the command not reaching the constructor for the sys_var class. A new bug will be opened to address this issue.
[16 Sep 2008 16:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54216 2694 Chuck Bell 2008-09-16 BUG#29643 : Backup: Link failure of executable mysqld, symbol in backup not found The backup code contains constructs that are not compatible with the Xlc compiler (formerly VisualAge) on AIX. The errors include: * C++ comments in a .c file * Namespace issues. * Extra ; after method definition
[17 Sep 2008 9:03]
Rafal Somla
Good to push.
[29 Sep 2008 9:40]
Jørgen Løland
Patch approved
[17 Oct 2008 17:24]
Bugs System
Pushed into 6.0.8-alpha (revid:cbell@mysql.com-20080916160918-59dk0kct2kd880gz) (version source revid:oystein.grovlen@sun.com-20080930094956-3qxly6h7nyc2r253) (pib:5)
[18 Oct 2008 15:32]
Paul DuBois
No changelog entry needed.
