BUG#29643 : Backup: Link failure of executable mysqld, symbol in backup not found

The backup code contains constructs that are not compatible with the Xlc compiler
(formerly VisualAge) on AIX.

The errors include:
* C++ comments in a .c file
* Namespace issues.
* Extra ; after method definition